# block_optimization

./: CMakeLists.txt  README.md  package.xml
include/block_optimization/: block.h  block_optimization.h  ceres_cost_function.h  ceres_solver.h  datatypes.h  problem.h  processing_chain.h  sgd_solver.h  solver.h  standard_blocks.h  vision_blocks.h
include/block_optimization/standard_blocks/: data_block.h  linear_error.h  rotation.h  transform_6dof.h  vectoradd.h
include/block_optimization/vision_blocks/: pinhole_camera.h  pinhole_projection.h  poly_distortion.h  stereo_camera.h  vector_homogenization.h
src/: ceres_cost_function.cpp  ceres_solver.cpp
test/: line_blocks.h  standard_block_test.cpp  test_block_optimization.cpp  test_solver.cpp  vision_block_test.cpp
