<?xml version="1.0"?>
<package format="2">
  <name>block_optimization</name>
  <version>0.0.0</version>
  <description>This repository provides block optimization.</description>

  <license>GPLv3</license>
  <maintainer email="christian.kinzig@kit.edu">Christian Kinzig</maintainer>
  <author email="eike.rehder@kit.edu">Eike Rehder</author>
  <url type="repository">https://gitlab.mrt.kit.edu/MRT/draft/block_optimization.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>gtest</test_depend>
  <depend>libceres-dev</depend>
  <depend>libopencv-dev</depend>
  <depend>eigen</depend>
  <!-- 
    Documentation for dependencies:
    <build_depend>            Build-time dependency required to build 
                              this package, e.g. boost, opencv.
    <build_export_depend>     Exported build-time dependency required to 
                              build packages that depend on this package,
                              e.g. boost, opencv.
    <exec_depend>             Execution dependency required to run this 
                              package, e.g. boost, opencv.
    <depend>                  Build-time, exported build-time and execution
                              dependency. This is a bundled synonym for
                              <build_depend>, <build_export_depend> and
                              <exec_depend>.
  -->
  <!-- 
    Example:
    <depend>mrt_opencv</depend> 
  -->
  
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
